# sossisse

./: .readthedocs.yaml  README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  version.txt
batches/: batch_lsh1140.py  duplicate_yaml.py  get_cube_wavesol.py  plot_skybg_diff.py  run_for_debug.py
sossisse/: __init__.py  base.py  general.py  info.yaml  math.py  misc.py  plots.py  science.py  soss_io.py  sync
sossisse/core/: __init__.py  base.py  base_classes.py  const_funcs.py  constants.py  exceptions.py  io.py  math.py  misc.py
sossisse/data/: defaults.yaml  demo.py  demo.yaml
sossisse/demos/: defaults.yaml  demo.yaml  demo_notebook.ipynb  demo_old.yaml  demo_python.py  sossisse_python.py  spectral_extraction.ipynb  white_light_curve.ipynb
sossisse/docs/source/: conf.py  index.rst
sossisse/general/: __init__.py  general.py  plots.py  run_sossisse.py  science.py  soss_io.py
sossisse/instruments/: __init__.py  default.py  jwst_niriss.py  jwst_nirspec.py  select.py
sossisse/recipes/: __init__.py  run_setup.py  run_sossisse.py
sossisse/resources/: html_template.html
sossisse/resources/demos/: __init__.py  niriss_soss_trappist1b.py  nirspec_g395_wasp39b.py  nirspec_prism_wasp39b.py
sossisse_analytools/: plot_covariance.py
varia/contamination_soss/: soss_comtam-OBSOLETE.py  soss_comtam.py
