[build-system]
requires = ["setuptools", "wheel", "radvel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = 'sossisse'
authors = [
    {name = 'Neil Cook', email = 'neil.james.cook@gmail.com'},
]
description = 'SOSSISSE - SOSS Inspired SpectroScopic Extraction'
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = 'LICENSE'}
requires-python = "==3.11.*"
dependencies = [
    "jwst==1.17.1",
    "numpy==1.26.4",
    "astropy==7.0.1",
    "ipython==8.32.0",
    "scipy==1.15.2",
    "matplotlib==3.10.1",
    "numexpr==2.10.2",
    "tqdm==4.67.1",
    "h5py==3.13.0",
    "ruamel.yaml==0.18.10",
    "wpca==0.1",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "statsmodels==0.14.4",

    "Astraeus @ git+https://github.com/kevin218/Astraeus.git"
]

[project.urls]
Homepage = 'http://apero.exoplanets.ca'
Repository = 'https://github.com/njcuk9999/sossisse'

[project.scripts]
sossisse_setup = "sossisse.recipes.run_setup:run"
sossisse_run = "sossisse.recipes.run_sossisse:run"

[project.optional-dependencies]
full = ["aperocore @ git+https://github.com/njcuk9999/apero-drs.git@v0.8.003#subdirectory=apero-core"]
dev = ["aperocore"]
