[metadata]
name = sossise
version = 1.0
description = SOSSISSE - SOSS Inspired SpectroScopic Extraction
long_description = file: README.md
author = Etienne Artigau, Neil Cook
author_email = etienne.artigau@umontreal.ca
url = https://github.com/njcuk9999/sossise
license = MIT License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy==1.25.1
    astropy==5.3.1
    scipy==1.9.3
    matplotlib==3.7.2
    tqdm==4.65.0
    h5py==3.9.0
    PyYAML==6.0
    wpca==0.1
    scikit-image==0.21.0
    scikit-learn==1.3.0

python_requires = >=3.9
